--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -32,6 +32,16 @@
   height: 35px;
 }
 
+.catalog__sort-inner {
+  position: relative;
+  &::before {
+    content: url("../img/icons/icon-arrow.svg");
+    position: absolute;
+    top: 7px;
+    right: 16px;
+  }
+}
+
 .catalog__sort {
   appearance: none;
   background: $floral-white;
@@ -42,7 +52,8 @@
   font-size: 12px;
   line-height: 15px;
   color: $pink-swan;
-  padding: 10px 16px 11px;
+  padding: 10px 27.5px 11px 16px;
+  cursor: pointer;
 }
 
 .catalog__list {
