--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -3,11 +3,22 @@
   margin: 0 auto;
   display: flex;
   padding: 32px;
-  justify-content: space-between;
+
+  @media (max-width: $width-tablet) {
+    flex-direction: column;
+  }
+  @media (max-width: $width-mobile) {
+    padding: 16px;
+  }
+
 }
 
 .catalog__form-wrap {
-  width: 332px;
+  margin: 0 16px 0 0;
+
+  @media (max-width: $width-tablet) {
+    margin: 0 0 16px 0;
+  }
 }
 
 .catalog__form-title {
@@ -18,10 +29,17 @@
   color: $eclipse;
 }
 
+.catalog__form {
+  width: 332px;
+
+  @media (max-width: $width-mobile) {
+    width: 100%;
+  }
+}
+
 .catalog__list-wrap {
   display: flex;
   flex-direction: column;
-  width: 1028px;
 }
 
 .catalog__sort-wrap {
@@ -34,6 +52,7 @@
 
 .catalog__sort-inner {
   position: relative;
+
   &::before {
     content: url("../img/icons/icon-arrow.svg");
     position: absolute;
@@ -47,13 +66,23 @@
   background: $floral-white;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
-  border: none;
+  border: 0.5px solid $floral-white;
   font-weight: normal;
   font-size: 12px;
   line-height: 15px;
   color: $pink-swan;
   padding: 10px 27.5px 11px 16px;
   cursor: pointer;
+
+  &:hover {
+    background: $white;
+  }
+
+  &:focus {
+    background: $white;
+    border: 0.5px solid $amulet;
+    outline: none;
+  }
 }
 
 .catalog__list {
@@ -63,4 +92,11 @@
   padding: 0;
   list-style: none;
   gap: 16px;
+}
+
+.catalog__item {
+  width: 332px;
+  @media (max-width: $width-mobile) {
+    width: 100%;
+  }
 }
