--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,10 +1,8 @@
 $retina-dpi: 144dpi;
 $retina-dppx: 1.5dppx;
-$width-L: 1600px;
-$width-M: 1280px;
-$width-S: 992px;
-$width-XS: 768px;
-$min-width: 480px;
+$width-tablet: 1280px;
+$width-mobile: 768px;
+$min-width: 332px;
 
 
 //Colors:
